--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 赵锐凡
 description: 论文阅读笔记
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/daitu.jpg
 
 #
 # Flags below are optional
